<resources>
    <string name="app_name">HabitatAppV2.0</string>
    <string name="appTitle">Welcome</string>
    <string name="appSubtitle">Please document your Habitat</string>
    <string name="button_addSpecies">Add Species</string>
    <string name="hint_titleText">Enter Common Name</string>
    <string name="hint_scientificName">Enter Scientific Name - if known</string>
    <string name="hint_speciesDescription">Enter Description</string>
    <string name="hint_habitatType">Enter Habitat Type</string>
    <string name="addNoOfSpeciesSeen">No. of Species Seen</string>
    <string name="amountOfSpeciesSeen">No. of Species Seen: : %d</string>
    <string name="soilType">Choose A Soil Type</string>
    <string name="clay">Clay</string>
    <string name="silt">Silt</string>
    <string name="sand">Sand</string>
    <string name="stones">Stones</string>
    <string name="chalky">Chalky</string>
    <string name="action_addSpecies">Add Species</string>
    <string name="action_showSpeciesList">Show Species List</string>
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">Habitat App</string>
    <string name="nav_header_subtitle">documentHabitats@android.com</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="action_about">About Us</string>
    <string name="about_title">Welcome to your Habitat App</string>
    <string name="about_message">Please start documenting your habitat today!</string>
    <string name="speciesListNotFound">No species added...\nPlease add your Species!</string>
    <string name="addSpeciesError">Error: Unable to add a species</string>
    <string name="speciesDetails">Species Details</string>
    <string name="commonName">Common Name: </string>
    <string name="scientificName">Scientific Name: </string>
    <string name="speciesDescription">Species Description: </string>
    <string name="button_addImage"> Add Image</string>
    <string name="button_editSpecies">Edit</string>
    <string name="button_deleteSpecies">Delete</string>
    <string name="select_species_image">Select Species Image</string>
    <string name="change_species_image">Change Image</string>
    <string name="messageLoading">Please wait while the Species are loading</string>
</resources>