<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addSpeciesFragment"
            android:icon="@drawable/ic_menu_addspecies"
            android:title="@string/action_addSpecies" />
        <item
            android:id="@+id/speciesListFragment"
            android:icon="@drawable/ic_menu_showspecieslist"
            android:title="@string/action_showSpeciesList" />
        <item
            android:id="@+id/speciesDetails"
            android:icon="@drawable/ic_menu_details"
            android:title="@string/speciesDetails" />

        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/action_about" />


    </group>

    <item android:title="@string/group_communicate">
        <menu>
            <item
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_share" />
            <item
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_send" />
        </menu>
    </item>
</menu>